<resources>
    <string name="app_name">i.am.retailer</string>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="product_name">LOREM LR0001 Stylish Mens Analog Watch</string>
    <string name="open">openmenu</string>
    <string name="close">close_menu</string>
    <string name="rs">$</string>
    <string name="rate">4.8</string>
    <string name="cart">0</string>
    <string name="server_client_id">609338089678-2mrjk25p6d8cc1jkoh1raofq3bmts782.apps.googleusercontent.com</string>
    <string name="facebook_app_id">518934811993522</string>
    <string name="fb_login_protocol_scheme">fb518934811993522</string>
    <string name="loading_wait">Loading....</string>
    <string name="exit">Press again exit from the App</string>
    <string name="cate">Categories :</string>
    <string name="cates">Categories</string>
    <string name="features">Feature Products :</string>
    <string name="featuress">Feature Products</string>
    <string name="best">Best Selling :</string>
    <string name="bests">Best Selling</string>
    <string name="our_cat">Our Categories</string>
    <string name="product">PRODUCT INFO</string>
    <string name="review">REVIEWS</string>
    <string name="check">Checkout</string>
    <string name="total">Total</string>
    <string name="coupon">Apply Coupon</string>
    <string name="see_all">See all</string>
    <string name="seeall">See All</string>
    <string name="error_msg">Something went wrong.Try Again</string>
    <string name="retry">Retry</string>
    <string name="products">Products</string>
    <string name="sorting">Sort By :</string>
    <string name="no_items">No Products Found.</string>
    <string name="no_con">No Connection</string>
    <string name="check_network"> Please check your internet  \nconnectivity &amp; try again.</string>
    <string name="amount">Amount :</string>
    <string name="USERNAME_Email">Email*</string>
    <string name="PASSWORD">Password*</string>
    <string name="PASSWORD1">Password</string>
    <string name="Log_In">Login</string>
    <string name="B_text">Don\'t have an account?</string>
    <string name="sign_up">Create a new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Log_In1">Login</string>
    <string name="sign">Sign Up</string>
    <string name="phone">Mobile Number*</string>
    <string name="frist_name">First Name*</string>
    <string name="Signup">Sign Up</string>
    <string name="S_text">Already having an account?  </string>
    <string name="Forgot">Forgot Password</string>
    <string name="detailss">Your Personal Details</string>
    <string name="myorder">My Orders</string>
    <string name="delivered">delivered</string>
    <string name="Rated">Order Info</string>
    <string name="rated_value">The order  </string>
    <string name="rated_value1">is completed. Thank you for rating  </string>
    <string name="del_add">Delivery Address</string>
    <string name="com_time">Ordered Date</string>
    <string name="copy">COPY</string>
    <string name="view_shop">Contact Customer Care</string>
    <string name="paymets">Payment Method</string>
    <string name="shpp">Shipping Method:</string>
    <string name="ship">Shipping Information</string>
    <string name="track">Track Shipment</string>
    <string name="del_by">Delivery by</string>
    <string name="sub">Subtotal</string>
    <string name="tot">Order Total</string>
    <string name="favorite">Favorite</string>
    <string name="Log_reg">Login / Register</string>
    <string name="Account">Account</string>
    <string name="Order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="zero">0</string>
    <string name="product_details">Product Details</string>
    <string name="share_this">Share</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="error_net">Error in Network, Try Again</string>
    <string name="tap_retry">Tap to Retry</string>
    <string name="select_color">Select Color :</string>
    <string name="select_size">Select Size :</string>
    <string name="select">Select :</string>
    <string name="date">Date</string>
    <string name="dates_contion">date</string>
    <string name="date_time_contion">datetime</string>
    <string name="time_contion">time</string>
    <string name="sing">S</string>
    <string name="stuff">Add some stuff!</string>
    <string name="no_cart_list">Currently you have no items in your cart</string>
    <string name="show_now">Shop Now</string>
    <string name="option">Options</string>
    <string name="last_name">Last Name*</string>
    <string name="your_pass">Your Password</string>
    <string name="Con_PASSWORD">Confirm Password*</string>
    <string name="send_mail">Send Mail</string>
    <string name="back_login">Back to Login</string>
    <string name="order">Order:</string>
    <string name="sym"> # </string>
    <string name="payment">Payment via</string>
    <string name="Quan">Quantity</string>
    <string name="Total_amount">Total Amount</string>
    <string name="details">Details</string>
    <string name="splash_text">Everyday Shopping, Simplified !</string>
    <string name="Paidment">Payment cash</string>
    <string name="qty">1</string>
    <string name="des">Description:</string>
    <string name="brand">Brand :</string>
    <string name="my_Cart">My Cart</string>
    <string name="delivery">Delivery Method</string>
    <string name="delivery_tex">Add Comments About Your Order</string>
    <string name="continues">Continue</string>
    <string name="pay_head">Payment Method</string>
    <string name="failed">Failed to place your order.</string>
    <string name="confirm">Confirm Order</string>
    <string name="ship_add">Shipping Address</string>
    <string name="name">name</string>
    <string name="quantity">Quantity :</string>
    <string name="items">Items</string>
    <string name="free">Free Shipping</string>
    <string name="amt">Amount :</string>
    <string name="order_places">Order Placed!</string>
    <string name="order_suc">Your order has been successfully placed, for more details,Check all my orders page</string>
    <string name="cont_shop">Continue Shopping</string>
    <string name="pay_method">Payment Method</string>
    <string name="pay_card">Master Cart ending **00</string>
    <string name="delivery_add">Delivery Address</string>
    <string name="ur_add">Your Address</string>
    <string name="first_name">First Name*</string>
    <string name="succ">Success</string>
    <string name="cmp">Company</string>
    <string name="add_1">Address Line 1*</string>
    <string name="add_2">Address Line 2</string>
    <string name="city">City*</string>
    <string name="pin">Pincode*</string>
    <string name="Quantity">Quantity</string>
    <string name="two">2</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="home">Home</string>
    <string name="Contact">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="facebook">Login with Facebook</string>
    <string name="gmail">Login with Google</string>
    <string name="contactus">Contact Us</string>
    <string name="your_name">Your Name*</string>
    <string name="submitts">Submit</string>
    <string name="got_any_intriguing_questions_adorable_compliments_or_helpful_feedback_we_d_love_to_hear_from_you">Got any intriguing questions, adorable compliments or helpful feedback. We’d love to hear from you!</string>
    <string name="comments_type_here">Comments type here..</string>
    <string name="your_form_submitted_successfully">Your enquiry submitted successfully. we will contact you back within 24 hours.</string>
    <string name="ok">Ok</string>
    <string name="related_products">Related Products</string>
    <string name="comments">Comments:</string>
    <string name="email_1">Email:</string>
    <string name="your_name_1">Your Name:</string>
    <string name="price">Rs.790.00</string>
    <string name="order_succuess">Order Success</string>
    <string name="notiication">Notification</string>
    <string name="cart_Add_text">Item added cart successfully</string>
    <string name="my_Cart_s">My Cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="order_emp">  Currently you have \nno items in your cart  </string>
    <string name="add_st">Add some stuff!</string>
    <string name="add_review">Add review</string>
    <string name="view_all">View all Reviews</string>
    <string name="reviews">Add Reviews</string>
    <string name="submit">POST</string>
    <string name="post_rev">Post Review Failed</string>
    <string name="post_suc">Your Review Post Successfully</string>
    <string name="review_toast">Please provide Reviews or Rating</string>
    <string name="review_toast2">Review Text must be between 25 and 1000 characters!</string>
    <string name="review_head">Product Reviews</string>
    <string name="add_reviews">Share your review here...</string>
    <string name="atoz">Name(A - Z)</string>
    <string name="ztoa">Name(Z - A)</string>
    <string name="matoz">Model(A - Z)</string>
    <string name="mztoa">Model(Z - A)</string>
    <string name="lowtohigh">Price - Low to High</string>
    <string name="hightolow">Price - High to Low</string>
    <string name="news">Newest</string>
    <string name="popular">Popular</string>
    <string name="out_of_stock">Currently this Product Out of Stock</string>
    <string name="login_failed">Login Failed, Email or Password Incorrect</string>
    <string name="invalid_email">Invalid Email ID,Try Again</string>
    <string name="email_link">An email with a confirmation link has been sent your email address.</string>
    <string name="exist">Already Register</string>
    <string name="try_again">Please try again</string>
    <string name="new_prod">Newest Products</string>
    <string name="popular_prod">Popular Products</string>
    <string name="log_qus">Are you sure you want to logout?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="contact">Contact</string>
    <string name="help">Do you want to call our helpline?</string>
    <string name="items_update">Item Updated Successfully</string>
    <string name="remove">Removed successfully</string>
    <string name="no_review">Currently No reviews</string>
    <string name="register">Register Successfully.</string>
    <string name="change_pwd">Change password</string>
    <string name="news_pwd1">New Password</string>
    <string name="pwd_mis">Password Mismatch ,Try Again</string>
    <string name="offer_range">75% - 20% OFF ON YOUR FIRST PURCHASE</string>
    <string name="offercode">555555</string>
    <string name="scratch">Scratch to get the code</string>
    <string name="order_id">Order ID  </string>
    <string name="updatea">Update Alert !</string>
    <string name="download_size">Download size:</string>
    <string name="updateplay">i.am.retailer recommends that you update to the latest version. You keep using this app while downloading the update.</string>
    <string name="now"><b>Now (over any network)</b> \nData charges may apply</string>
    <string name="wifi"><b>When Wi-fi is available</b></string>
    <string name="no_thanks">NO THANKS</string>
    <string name="updates">Update</string>
    <string name="SPECIAL_PRICE">SPECIAL PRICE</string>
    <string name="copy_code">COPY THE COUPON CODE</string>
</resources>