<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg_color1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/dp20">

        <com.iamretailer.Common.CustomTextview1
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp10"
            android:text="@string/contact"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/text18sp" />

        <com.iamretailer.Common.CustomTextview
            android:id="@+id/alert"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp40"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp10"
            android:text="@string/help"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/text14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp50"
            android:gravity="end|center_vertical">

            <com.iamretailer.Common.CustomTextview
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp10"
                android:gravity="center"
                android:paddingEnd="@dimen/dp15"
                android:paddingStart="@dimen/dp15"
                android:text="@string/no"
                android:textColor="@color/app_text_color"
                android:textSize="@dimen/text16sp" />

            <com.iamretailer.Common.CustomTextview
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp20"
                android:gravity="center"
                android:paddingEnd="@dimen/dp15"
                android:paddingStart="@dimen/dp15"
                android:text="@string/yes"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>